--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Setup Swift
-      uses: swift-actions/setup-swift@v3
-      with:
-        swift-version: '6.2'
+    - name: Check Swift Version
+      run: swift --version
 
     - name: Build
       run: swift build -c release
