--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,11 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
     tags-ignore:
-      - 'v*'
+      - "v*"
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 permissions:
   contents: read
@@ -16,19 +16,22 @@ jobs:
     runs-on: macos-15
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Check Swift Version
-      run: swift --version
+      - name: Check Swift Version
+        run: swift --version
 
-    - name: Build
-      run: swift build -c release
+      - name: Build
+        run: swift build -c release
 
-    # Note: No tests yet - uncomment when test suite is added
-    # - name: Run Tests
-    #   run: swift test
+      # Note: No tests yet - uncomment when test suite is added
+      # - name: Run Tests
+      #   run: swift test
 
-    - name: Verify Binary
-      run: |
-        ./.build/release/osx-bench --help
-        ./.build/release/osx-bench info
+      - name: Verify Binary
+        run: |
+          ./.build/release/osx-bench --help
+          ./.build/release/osx-bench info
+          ./.build/release/osx-bench run --help
+          ./.build/release/osx-bench run --quick
+          ./.build/release/osx-bench run --extended
